// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PatchBuilder edge cases removes parent with children - single remove patch for parent 1`] = `
[
  {
    "fieldName": "parent",
    "patch": {
      "op": "remove",
      "path": "/properties/parent",
    },
    "propertyChanges": [],
  },
]
`;

exports[`PatchBuilder edge cases rename + modify generates move then replace 1`] = `
[
  {
    "fieldName": "newName",
    "isRename": true,
    "movesIntoArray": undefined,
    "patch": {
      "from": "/properties/oldName",
      "op": "move",
      "path": "/properties/newName",
    },
    "propertyChanges": [
      {
        "from": "initial",
        "property": "default",
        "to": "modified",
      },
    ],
  },
  {
    "fieldName": "newName",
    "patch": {
      "op": "replace",
      "path": "/properties/newName",
      "value": {
        "default": "modified",
        "type": "string",
      },
    },
    "propertyChanges": [
      {
        "from": undefined,
        "property": "default",
        "to": "modified",
      },
    ],
    "typeChange": undefined,
  },
]
`;

exports[`PatchBuilder edge cases renames parent - children move together, single move patch 1`] = `
[
  {
    "fieldName": "newParent",
    "isRename": true,
    "movesIntoArray": undefined,
    "patch": {
      "from": "/properties/oldParent",
      "op": "move",
      "path": "/properties/newParent",
    },
    "propertyChanges": [],
  },
]
`;

exports[`PatchBuilder patch ordering add then remove same path in sequence - net effect is no change 1`] = `[]`;

exports[`PatchBuilder patch ordering array items rename with nested modifications 1`] = `
[
  {
    "fieldName": "items[*].newField",
    "isRename": true,
    "movesIntoArray": undefined,
    "patch": {
      "from": "/properties/items/items/properties/oldField",
      "op": "move",
      "path": "/properties/items/items/properties/newField",
    },
    "propertyChanges": [
      {
        "from": "original",
        "property": "default",
        "to": "modified",
      },
    ],
  },
  {
    "fieldName": "items[*].newField",
    "patch": {
      "op": "replace",
      "path": "/properties/items/items/properties/newField",
      "value": {
        "default": "modified",
        "type": "string",
      },
    },
    "propertyChanges": [
      {
        "from": undefined,
        "property": "default",
        "to": "modified",
      },
    ],
    "typeChange": undefined,
  },
]
`;

exports[`PatchBuilder patch ordering move patches come before add/remove 1`] = `
[
  {
    "fieldName": "renamedA",
    "isRename": true,
    "movesIntoArray": undefined,
    "patch": {
      "from": "/properties/fieldA",
      "op": "move",
      "path": "/properties/renamedA",
    },
    "propertyChanges": [],
  },
  {
    "fieldName": "newField",
    "patch": {
      "op": "add",
      "path": "/properties/newField",
      "value": {
        "default": "",
        "type": "string",
      },
    },
    "propertyChanges": [],
  },
  {
    "fieldName": "fieldB",
    "patch": {
      "op": "remove",
      "path": "/properties/fieldB",
    },
    "propertyChanges": [],
  },
]
`;

exports[`PatchBuilder patch ordering multiple renames in sequence 1`] = `
[
  {
    "fieldName": "x",
    "isRename": true,
    "movesIntoArray": undefined,
    "patch": {
      "from": "/properties/a",
      "op": "move",
      "path": "/properties/x",
    },
    "propertyChanges": [],
  },
  {
    "fieldName": "y",
    "isRename": true,
    "movesIntoArray": undefined,
    "patch": {
      "from": "/properties/b",
      "op": "move",
      "path": "/properties/y",
    },
    "propertyChanges": [],
  },
  {
    "fieldName": "z",
    "isRename": true,
    "movesIntoArray": undefined,
    "patch": {
      "from": "/properties/c",
      "op": "move",
      "path": "/properties/z",
    },
    "propertyChanges": [],
  },
]
`;
